k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tree
spec:
  selector:
    app: tree
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
