k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tree
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "local.ecosia.org"
    http:
      paths:
      - pathType: Prefix
        path: "/tree"
        backend:
          service:
            name: tree
            port:
              number: 5000
